deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novomanzelemiklasovi-web
  namespace: novomanzelemiklasovi
  labels:
    app: novomanzelemiklasovi
spec:
  selector:
    app: novomanzelemiklasovi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
